apps/dssp-may-07-04/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-may-07-04
  labels:
    backstage.io/kubernetes-id: dssp-may-07-04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-may-07-04
  template:
    metadata:
      labels:
        app: dssp-may-07-04
        backstage.io/kubernetes-id: dssp-may-07-04
    spec:
      containers:
        - name: dssp-may-07-04
          image: chaitanyapandeygspann/dssp-may-07-04:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
