apps/dssp-may-07-04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-may-07-04
spec:
  selector:
    app: dssp-may-07-04
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-may-07-04-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-may-07-04.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-may-07-04
#             port:
#               number: 80
