apps/dssp-may-07-04/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-may-07-04
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
spec:
  rules:
    - http:
        paths:
          - path: /dssp-may-07-04(/|$)(.*)               
            pathType: Prefix        
            backend:
              service:
                name: dssp-may-07-04
                port:
                  number: 80
